--- a/envs/environment-scalpel.yml
+++ b/envs/environment-scalpel.yml
@@ -25,3 +25,4 @@ dependencies:
       - pysersic
       - astro-sedpy
       - -e /Users/Jonah/PhD/Research/quiescent_galaxies/scalpel
+      - spectral-cube
