--- a/envs/environment-scalpel.yml
+++ b/envs/environment-scalpel.yml
@@ -24,5 +24,5 @@ dependencies:
       - interpax
       - pysersic
       - astro-sedpy
+      - stpsf
       - -e /Users/Jonah/PhD/Research/quiescent_galaxies/scalpel
-      - spectral-cube
