Refactored to work with dataclasses instead of dictionaries

--- a/envs/environment-scalpel.yml
+++ b/envs/environment-scalpel.yml
@@ -25,4 +25,5 @@ dependencies:
       - pysersic
       - astro-sedpy
       - stpsf
+      - reproject
       - -e /Users/Jonah/PhD/Research/quiescent_galaxies/scalpel
